codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_multiline_prefix_no_execpolicy.snap
---
source: tui/src/chatwidget/tests.rs
expression: contents
---


  是否执行以下命令？

  $ python - <<'PY'
  print('hello')
  PY

› 1. 是，继续 (y)
  2. 否，并告诉 Codex 该如何处理 (esc)

  按 enter 确认或按 esc 取消
