codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend().vt100().screen().contents()
---


  是否应用以下修改？

  原因：The model wants to apply changes

  README.md (+2 -0)

    1 +hello
    2 +world

› 1. 是，继续 (y)
  2. 是，并且不再询问这些文件 (a)
  3. 否，并告诉 Codex 该如何处理 (esc)

  按 enter 确认或按 esc 取消
