codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3092
expression: popup
---
  更新模型权限

› 1. 默认         Codex 可以读取并编辑当前工作区中的文件，并
                  运行命令。访问互联网或编辑其他文件需要审批。
                  （与 Agent 模式相同）
  2. 完全访问     Codex 可在无需审批的情况下编辑工作区外文件并访问
                  互联网。使用时请谨慎。

  按 Enter 确认或按 Esc 返回
