codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apps_popup_loading_state.snap
---
source: tui/src/chatwidget/tests.rs
expression: before
---
  应用
  正在加载已安装和可用的应用...

› 1. 正在加载应用...  完整列表就绪后会更新。
